# SyntheticAmazonOrder

./: README.md  amazon_order_template.html  app_amazon_generator  fastapi_server.py  hello.py  order_example.html  pyproject.toml  synthetic_orderup.ipynb
.devcontainer/: devcontainer.json
data/: invoices.csv  orders.csv
output/: order_confirmation.html
